<resources>
    <string name="app_name">Carros Elétricos</string>
    <string name="title">Carros Elétricos</string>
    <string name="tab_car">Carros</string>
    <string name="tab_fav">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="torque">Torque</string>
    <string name="autonomia">Autonomia</string>
    <string name="recarga_completa">Recarga completa</string>
    <string name="arranque">De 0 a 100 km</string>
    <string name="calcular">Calcular</string>
    <string name="km_percorrido">Km percorridos</string>
    <string name="preco_por_km">Preço por kWh</string>
    <string name="calcular_autonomia">Calcular autonomia</string>
    <string name="no_wifi">Ops, internet não disponível ):</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
</resources>